@@ -1,6 +1,7 @@
 Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
+    - add get_appliance_bgp_system_config
     - add get_appliance_bgp_neighbors
 
 0.013000  2024-05-23 12:34:48+02:00 Europe/Vienna
